--- a/resizing_images/.env
+++ b/resizing_images/.env
@@ -1,2 +1,1 @@
-SEKRET_KEY=6(b%q6_ho)!61%&nm((z^)9cf^5x^v!x9)xg_$fb--n0iky2ec
-DEBUG=on
+SECRET_KEY=6(b%q6_ho)!61%&nm((z^)9cf^5x^v!x9)xg_$fb--n0iky2ec
